syntax = "proto3";

option go_package="../pb;pb";
message Page{
  int64 page = 1;
  int64 pageSize = 2;
}

message Empty{}

message BoolResponse{
  bool res = 1;
}
message Context{
  map<string, string> context = 1;
}
message IdReQuest{
  int64 id = 1;
}
message IdResponse{
  int64 id = 1;
}

message TotalResponse{
  int64 total = 1;
}